Fixed Type sizes and spacing for small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,19 +44,29 @@
 
 .blockquote {
   font-size: 2rem;
-  text-shadow: 3px 3px #8e341b;
+  text-shadow: 1.9px 1.9px #8e341b;
   line-height: 1.5;
   letter-spacing: 1px;
-  color: #c5c6c7;;
+  color: #e5e5e5;
   font-family: 'Rye', cursive;
+  text-align: center;
+}  
+
+.blockquote2 {
+  font-size: 1.3rem;
+  text-shadow: 1.25px 1.25px #8e341b;
+  line-height: 1.5;
+  letter-spacing: 1.5px;
+  color: #f2f2f2;
+  font-family: 'Magneto', cursive;
   text-align: center;
 }  
 
 /* H1 Synopsis in Magneto */
 .Synopsis {
   margin-top: 0;
-  padding: 0px 0px 25px 0px;
-  text-shadow: 1px 1px 4px #c5c6c7;
+  padding: 0px 0px 20px 0px;
+  text-shadow: 1px 1px 4px #e5e5e5;
   font-family: Magneto;
   font-style: normal;
   font-weight: bold;
@@ -81,14 +91,14 @@
   font-size: 1.4rem;
   letter-spacing: 1.45px;
   line-height: 1.6;
-  color: #c5c6c7;
+  color: #e5e5e5;
   max-width: 100%;
 }
 
 /* H1 Starring in Magneto */
 .Starring {
-  padding: 10px 0px 25px 0px;
-  text-shadow: 1px 1px 4px #c5c6c7;
+  padding: 10px 0px 20px 0px;
+  text-shadow: 1px 1px 4px #e5e5e5;
   font-family: Magneto;
   font-style: normal;
   font-weight: bold;
@@ -100,7 +110,7 @@
 
 .cast {  
   margin-bottom: 0;
-  color: #8e341b;
+  color: #e5e5e5;
   display: flex;
   flex-wrap: wrap;
   font-family: 'Rye', 'Mesquite Std';
@@ -110,7 +120,7 @@
 }
 
 .cast:hover {
-  color: #c5c6c7;
+  color: #8e341b
 }
 
 /* Found this "Border Image Generator" by Mozilla to stylize the Actor's images: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Background_and_Borders/Border-image_generator  */
@@ -136,12 +146,12 @@
 
 /* Sources & Add'l content bullet links near bottom */
 .MoreInsights {
-  padding: 0px 0px 25px 0px;
-  text-shadow: 1px 1px 4px #c5c6c7;
+  padding: 0px 0px 10px 0px;
+  text-shadow: 1px 1px 4px #e5e5e5;
   font-family: Magneto;
   font-style: normal;
   font-weight: bold;
-  font-size: 2.9rem;
+  font-size: 3.2rem;
   line-height: 48px;
   letter-spacing: 0.02em;
   color: #8E341B;
@@ -171,14 +181,14 @@ box-shadow: 10px 0 0 #F0F0F0, 20px 0 0 #000, 30px 0 0 #F0F0F0, 0 10px 0 #F0F0F0,
 
 ul {
   margin: 0 auto;
-  color: #c5c6c7;
+  color: #e5e5e5;
   line-height: 2.5;
   max-width: 525px; 
 }
 
 /* Source link styling */
 a {
-    color: #c5c6c7;
+    color: #e5e5e5;
     font-family: 'Rye', cursive;
     font-size: 1.35rem;
     letter-spacing: .05em;
@@ -198,7 +208,7 @@ footer {
   letter-spacing: 1.45px;
   line-height: 1.6;
   margin: 100px 0px;
-  color: #c5c6c7;
+  color: #e5e5e5;
 }
 
 /* Example: Change color of play button */
@@ -229,37 +239,44 @@ footer {
 /* Mobile - Tablet 0 to 960px */
 @media (max-width: 960px) { 
     
-    .img {
-    max-width: 150px;
+   .img {
+    max-width: 175px;
     margin: 0 auto;
-}
-    .plyr, #trailer {
+  }
+    
+  .plyr, #trailer {
     max-width: 100%;
   }
+  
   .aside {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     max-width: 100%;
   }
+  
   a, ul { 
       font-size: 1rem;
       line-height: 2;
       padding-top: 20px;
       padding-bottom: 20px;
       max-width: 500px;
+ 
   }
   .MoreInsights,
   .Starring,
   .Synopsis {
-    font-size: 2.2rem;
+      font-size: 2.8rem;
+  
   }
   .cast,
   .description {
-    font-size: 1.1rem;
+      font-size: 1.2rem;
+ 
+  
   }
   .blockquote {
-    font-size: 1.7rem;
+      font-size: 1.7rem;
   }
 }
 
